--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.1",
+    "stripe": "^8.171.0",
     "validator": "^13.6.0"
   }
 }
