--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon index.js ",
+    "stag": "env-cmd -f ./config/stag.env nodemon index.js ",
+    "start": "env-cmd -f ./config/production.env nodemon index.js ",
     "test": "env-cmd -f ./tests/.env jest --watchAll --runInBand"
   },
   "jest": {
@@ -24,8 +26,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.1",
+    "morgan": "^1.10.0",
     "stripe": "^8.171.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
