--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.6",
+    "axios": "^0.21.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "googleapis": "^85.0.0",
+    "hbs": "^4.1.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.1",
     "morgan": "^1.10.0",
+    "query-string": "^7.0.1",
     "stripe": "^8.171.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
